--- 2.1.20 2006/06/02

Bug #600: SRU GET, POST support for yaz-client. Introduced
command 'sru' which selects method SOAP/GET/POST.

Allow missingValueAction to be specified for the sortspec string - 
function yaz_sort_spec. By default, the missing value action is null.
Use ! to specify "abort". Use = followed by stringvalue to specify default
value.

Ensured that Present-handler (if defined) is called in GFS before any call to
fetch-hhndler.  This now includes piggy-backed presents as well as SRW/U
searchRetrieve requests.

Documentation for YAZ is now based on the Docbook XML/XSLT using
xsltproc + N Walsh's stylesheets. It means that the CVS version of YAZ
is no longer depending on jade/openjade or docbook-to-man scripts.
PDF is no longer part of the distribution - but can optionally be
made using DSSSL/jadetex or FOP.

Added retrieval handling support in Generic Frontend Server to support
conversion between MARC/XML as well as XSLTtransforms. See
etc/yazgfs.xml for an example.

Added Authentication support to Generic Frontend Server in SRU
mode. Authentication using HTTP Basic is supported, as is the use
of 'x-username' and 'x-password' parameters in the request itself.

Added support for a new character set MARC8s identical to MARC8 except
that it converts combined characters to single Unicode characters in the
Latin-1 range (when possible).

--- 2.1.18 2006/04/24

ASN.1 compiler 0.4: generates brief Doxygen file header for 
generated .h/.c files. 

Utility yaz_iconv now supports conversion to MARC-8.

New facilities for the MARC module. The reading - and writing of
content are separate methods for the yaz_marc_t handle. The following
read functions are available: yaz_marc_read_iso2709 (Reads MARC in
ISO2709 format), yaz_marc_read_xml (reads MARC in MARCXML/MarcXchange
format). Write functions have prefix yaz_marc_write_.. The existing
utilities yaz_marc_decode_wrbuf and yaz_marc_decode_buf are still